# bazel-rust-musl

./: BUILD.bazel  BUILD.openssl.bazel  MODULE.bazel  README.md  platform-binary.bzl
example/: BUILD.bazel  main.rs
